# pickle_risc

./: .gitignore  3operand.txt  Makefile  OS_notes.md  Readme.md  alu.txt  block diagram.drawio  design.md  filesystem_notes.md  generate_instruction_set_html.py  instruction_encoding.ods  instruction_set.html  instruction_set.json5  isa.md  isa.py  new_instruction_set.py  palettes.ipynb  rebuild_instruction_set_html.sh  requirements.txt  test.asm  test_asm.py
asm_samples/: jump_table.asm  misc.asm  mul.asm  string.asm
assembler/: Makefile  assembler.c  assembler.h  expressions.c  expressions.h  generate_instructions.py  ihex.c  ihex.h  ihex_output.c  ihex_output.h  instructions.h  localized_file.h  main.c  printing.c  printing.h  pseudo_instructions.c  pseudo_instructions.h  stack.h  test.s  test_include.s  test_tokenizer.s  tokenizer.c  tokenizer.h  util.c  util.h
board_tests/: .gitignore  Readme.md  conftest.py  requirements.txt  test_alu_board.py  test_register_board.py
common/: ihex.c  ihex.h  localized_file.c  printing.c  printing.h  stack.h  util.c  util.h
electronics/: pickle_risc.epro
electronics/register_board/: 16bit_d_flip-flop.kicad_sch  4_to_16_demux.kicad_sch  decoding.kicad_sch  register_board.kicad_pcb  register_board.kicad_prl  register_board.kicad_pro  register_board.kicad_sch  registers_storage.kicad_sch  single_register.kicad_sch  untitled.kicad_sch  zero_register.kicad_sch
electronics/register_board/register_board/: register_board.kicad_pro
emulator/: Makefile  cpu_state.c  cpu_state.h  generate_instruction_handler.py  instruction_handler.h  main.c
emulator-rs/: Cargo.toml  build.rs
emulator-rs/instruction_set/: Cargo.toml
emulator-rs/instruction_set/src/: lib.rs
emulator-rs/src/: cpu.rs  cpu_types.rs  instruction_handler.rs  lib.rs  main.rs  memory.rs  system.rs  util.rs
emulator/devices/: memory.c  memory.h  uart.c  uart.h
model/: Readme.md  alu_board.sv  register_board.sv
notes/: Readme.md  construction.md  graphics.md  lisp.md  palettes.ipynb
toolchain-rs/: .gitignore  Cargo.toml  build.rs  test.asm  test.hex
toolchain-rs/assembler/: assembler.rs  chumsky_util.rs  expr_parser.rs  files.rs  lexer.rs  main.rs  mod.rs  parser.rs  types.rs
toolchain-rs/disassembler/: Cargo.toml  build.rs  disassembler.rs  main.rs
toolchain-rs/disassembler/src/: image.rs  instruction.rs  lib.rs  main.rs  util.rs
toolchain-rs/emulator/: Cargo.toml  build.rs  cpu_types.rs  main.rs  memory.rs
toolchain-rs/emulator/proptest-regressions/: memory.txt
toolchain-rs/emulator/src/: cpu.rs  cpu_types.rs  lib.rs  system.rs
toolchain-rs/instruction_set/: Cargo.toml
toolchain-rs/instruction_set/src/: lib.rs
toolchain-rs/proptest-regressions/: instruction.txt  lexer.txt
toolchain-rs/src/: cpu.rs  cpu_types.rs  image.rs  instruction.rs  lib.rs  memory.rs  system.rs  util.rs
toolchain-rs/src/assembler/: expr_parser.rs  files.rs  lexer.rs  main.rs  mod.rs  parser.rs  state.rs
toolchain-rs/src/disassembler/: main.rs
toolchain-rs/src/emulator/: cpu.rs  cpu_types.rs  mod.rs  system.rs
toolchain-rs/src/instruction_set_html_generator/: main.rs
toolchain-rs/src/proptest-regressions/: lexer.txt
toolchain-rs/toolchain_core/: image.rs  instruction.rs  util.rs
trilo8bit/: isa.py
trilo8bit/assembler/: __init__.py  __main__.py  assembler.py  embeded.py  instructions.py
trilo8bit/util/: isahelpers.py
