[package]
name = "pickle-emu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
json5 = "0.4.1"
serde = { version = "1.0.145", features = ["derive"] }
itertools = "0.10.5"
anyhow = "1.0.65"
thiserror = "1.0.37"
