[package]
name = "pickle-emu"
version = "0.1.0"
edition = "2021"

[dependencies]
iset = "0.1.1"
itertools = "0.10.5"
anyhow = "1.0.65"
thiserror = "1.0.37"
#ux = "0.1.5"
ux = { git = "https://github.com/bluecube/uX.git", branch = "cube", features = ["proptest-support"] }
num_enum = "0.5.7"
more-asserts = "0.3.1"

[dev-dependencies]
test-strategy = "0.2.1"
proptest = "1.0.0"

[build-dependencies]
instruction_set = { path = "./instruction_set" }
itertools = "0.10.5"
anyhow = "1.0.65"
thiserror = "1.0.37"
either = "1.8.0"
