[package]
name = "pickle-toolchain"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "emulator"
path = "src/emulator/main.rs"

[[bin]]
name = "assembler"
path = "src/assembler/main.rs"

[[bin]]
name = "disassembler"
path = "src/disassembler/main.rs"

[[bin]]
name = "instruction_set_html_generator"
path = "src/instruction_set_html_generator/main.rs"

[features]
default = ["html-generator"]
html-generator = ["dep:maud"]

[dependencies]
itertools = "0.10.5"
anyhow = "1.0.65"
thiserror = "1.0.37"
#ux = "0.1.5"
ux = { git = "https://github.com/bluecube/uX.git", branch = "cube", features = ["proptest-support"] }
num_enum = "0.5.7"
more-asserts = "0.3.1"
ihex = "3.0.0"

clap = { version = "4.0.18", features = ["derive"] }
clio = { version = "0.2.7", features = ["clap-parse"] }
rand = "0.8.5"
logos = "0.12.1"

maud = { version = "0.24.0", optional = true }
instruction_set = { path = "./instruction_set" }
regex = "1.7.3"
lazy_static = "1.4.0"

[dev-dependencies]
test-strategy = "0.2.1"
proptest = "1.0.0"

[build-dependencies]
instruction_set = { path = "./instruction_set" }
itertools = "0.10.5"
anyhow = "1.0.65"
thiserror = "1.0.37"
either = "1.8.0"
