[package]
name = "pickle-toolchain"
version = "0.1.0"
edition = "2024"

[lib]
name = "toolchain_core"
path = "toolchain_core/lib.rs"

# [[bin]]
# name = "emulator"
# path = "emulator/main.rs"

# [[bin]]
# name = "assembler"
# path = "assembler/main.rs"

[[bin]]
name = "disassembler"
path = "disassembler/main.rs"

[dependencies]
itertools = "0.14.0"
anyhow = "1.0.100"
thiserror = "2.0.16"
#ux = "0.1.5"
ux = { git = "https://github.com/bluecube/uX.git", branch = "cube", features = ["proptest-support"] }
num_enum = "0.7.4"
more-asserts = "0.3.1"
ihex = "3.0.0"
clap = { version = "4.5.48", features = ["derive"] }
clio = { version = "0.3.5", features = ["clap-parse"] }
strum = { version = "0.27.2", features = ["derive"] }

[dev-dependencies]
test-strategy = "0.4.3"
proptest = "1.8.0"
test-case = "3.3.1"
